adds Sigmoid to eval phase, updates env.yml, and predection vis notebook fixes

--- a/notebooks/visualize_prediction_results.ipynb
+++ b/notebooks/visualize_prediction_results.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## Visualize prediction results\n",
-    "Feeds randomly selected images into a trained model and visualizes the results"
+    "Feeds randomly selected images into a trained model and visualizes the results.\n",
+    "Follow this [guide](https://towardsdatascience.com/running-jupyter-notebook-in-google-cloud-platform-in-15-min-61e16da34d52) for setting up jupyter notebooks with gcloud compute."
    ]
   },
   {
@@ -48,8 +49,8 @@
    "outputs": [],
    "source": [
     "# Specify paths\n",
-    "data_json = '../data/synthetic/val.json'\n",
-    "config_file = '../src/config.yaml'\n",
+    "data_json = '../data/synthetic/val.json'  # train.json, val.json or test.json\n",
+    "config_file = '../output/second_good_run/config.yaml'\n",
     "model_weights = '../output/second_good_run/model_final.pth'"
    ]
   },
@@ -59,11 +60,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "GRID_SIZE = 4\n",
     "cfg = get_cfg()\n",
     "cfg.merge_from_file(config_file)\n",
     "cfg.MODEL.WEIGHTS = os.path.abspath(model_weights)\n",
     "cfg.INPUT.MIN_SIZE_TEST = 800 # apply resizing?\n",
-    "cfg.INPUT.MAX_SIZE_TEST = 800 \n",
+    "cfg.INPUT.MAX_SIZE_TEST = 800\n",
+    "cfg.INPUT.FORMAT = \"BGR\" # this is the case when using cv2.imread()\n",
     "\n",
     "predictor = DefaultPredictor(cfg)\n",
     "# docs here https://detectron2.readthedocs.io/modules/engine.html#detectron2.engine.defaults.DefaultPredictor\n",
@@ -76,21 +79,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# specify how many random images to output\n",
+    "# TODO: make a function and then just run every time\n",
+    "# TODO: over image overlayed\n",
     "num_preds = 10\n",
     "for d in random.sample(dataset_dicts, num_preds):\n",
+    "    print('===================')\n",
+    "    print('===================')\n",
     "    print(d[\"file_name\"])\n",
     "    img = cv2.imread(d[\"file_name\"])\n",
-    "    output = predictor(img)  # can test with output = torch.rand(16)\n",
-    "    predictions = output['pred'].to(\"cpu\").round().numpy().astype(int)\n",
+    "    plt.imshow(img)\n",
+    "    plt.show()\n",
+    "    output = predictor(img)\n",
+    "    predictions = output['pred'].cpu().round().numpy().astype(int)\n",
     "    truth_labels = np.array(d['label'])\n",
+    "    print(\"labels: \" + str(truth_labels))\n",
+    "    print(\"preds: \" + str(predictions))\n",
     "    img = draw_pred_vs_true(img,\n",
-    "                            predictions, \n",
-    "                            truth_labels)\n",
+    "                            predictions.reshape(GRID_SIZE, GRID_SIZE), \n",
+    "                            truth_labels.reshape(GRID_SIZE, GRID_SIZE))\n",
     "   \n",
     "    plt.imshow(img)\n",
     "    plt.show()"
@@ -123,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
