adds method for setting seed + small change to vis tool notebook

--- a/notebooks/visualize_prediction_results.ipynb
+++ b/notebooks/visualize_prediction_results.ipynb
@@ -83,13 +83,10 @@
    },
    "outputs": [],
    "source": [
-    "# specify how many random images to output\n",
-    "# TODO: make a function and then just run every time\n",
-    "# TODO: over image overlayed\n",
-    "num_preds = 10\n",
-    "for d in random.sample(dataset_dicts, num_preds):\n",
-    "    print('===================')\n",
-    "    print('===================')\n",
+    "# TODO: overlay image\n",
+    "def visualize_preds():\n",
+    "    \"\"\"Gets a random sample from 'data_json' feeds it into the model and compares predictions to truth labels\"\"\"\n",
+    "    d = random.sample(dataset_dicts, 1)[0]\n",
     "    print(d[\"file_name\"])\n",
     "    img = cv2.imread(d[\"file_name\"])\n",
     "    plt.imshow(img)\n",
@@ -105,6 +102,16 @@
     "   \n",
     "    plt.imshow(img)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run this block several times to get a qualitative sense of how well the model is doing\n",
+    "visualize_preds()"
    ]
   },
   {
