--- a/notebooks/visualize_prediction_results.ipynb
+++ b/notebooks/visualize_prediction_results.ipynb
@@ -89,7 +89,7 @@
     "    d = random.sample(dataset_dicts, 1)[0]\n",
     "    print(d[\"file_name\"])\n",
     "    img = cv2.imread(d[\"file_name\"])\n",
-    "    plt.imshow(img)\n",
+    "    plt.imshow(img[:, :, ::-1])  # convert image from OpenCV BGR format to Matplotlib RGB format\n",
     "    plt.show()\n",
     "    output = predictor(img)\n",
     "    predictions = output['pred'].cpu().round().numpy().astype(int)\n",
@@ -100,7 +100,7 @@
     "                            predictions.reshape(GRID_SIZE, GRID_SIZE), \n",
     "                            truth_labels.reshape(GRID_SIZE, GRID_SIZE))\n",
     "   \n",
-    "    plt.imshow(img)\n",
+    "    plt.imshow(img[:, :, ::-1])\n",
     "    plt.show()"
    ]
   },
