cleans up repo + improves README

--- a/notebooks/visualize_prediction_results.ipynb
+++ b/notebooks/visualize_prediction_results.ipynb
@@ -10,6 +10,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Setup\n",
+    "Steps to configure the prediction visualizer."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,15 +33,8 @@
     "# Create symlinks so can import them here\n",
     "!ln -s ../scripts/draw_grid.py draw_grid.py\n",
     "!ln -s ../src/imgcls/config config\n",
-    "!ln -s ../src/imgcls/modeling modeling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!ln -s ../src/imgcls/modeling modeling\n",
+    "\n",
     "import os\n",
     "import json\n",
     "import random\n",
@@ -43,6 +49,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Specify paths\n",
+    "Specify the relative file paths for the data, config file, and model weights."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -55,25 +71,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Set parameters\n",
+    "Set the grid size and the min/max image sizes to feed to the model."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GRID_SIZE = 4\n",
     "cfg = get_cfg()\n",
     "cfg.merge_from_file(config_file)\n",
     "cfg.MODEL.WEIGHTS = os.path.abspath(model_weights)\n",
-    "cfg.INPUT.MIN_SIZE_TEST = 720 # apply resizing?\n",
-    "cfg.INPUT.MAX_SIZE_TEST = 1280\n",
     "cfg.INPUT.FORMAT = \"BGR\" # this is the case when using cv2.imread()\n",
     "\n",
+    "# Specify grid size\n",
+    "GRID_SIZE = 4\n",
+    "\n",
+    "# specify min/max image sizes\n",
+    "cfg.INPUT.MIN_SIZE_TEST = 224\n",
+    "cfg.INPUT.MAX_SIZE_TEST = 224\n",
+    "\n",
+    "# use default predictor, docs below\n",
+    "# https://detectron2.readthedocs.io/modules/engine.html#detectron2.engine.defaults.DefaultPredictor\n",
     "predictor = DefaultPredictor(cfg)\n",
-    "# docs here https://detectron2.readthedocs.io/modules/engine.html#detectron2.engine.defaults.DefaultPredictor\n",
     "\n",
     "with open(data_json, 'r') as json_file:\n",
     "    dataset_dicts = json.load(json_file)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Define method\n",
+    "Main method for generating predictions for a random sample from dataset."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -83,7 +124,6 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: overlay image\n",
     "def visualize_preds():\n",
     "    \"\"\"Gets a random sample from 'data_json' feeds it into the model and compares predictions to truth labels\"\"\"\n",
     "    d = random.sample(dataset_dicts, 1)[0]\n",
@@ -105,14 +145,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# run this block several times to get a qualitative sense of how well the model is doing\n",
-    "visualize_preds()"
-   ]
+    "#### Main\n",
+    "This is the main code block which displays the predictions and truth labels. Run this block several times to get a\n",
+    "qualitative sense of how well the model is doing"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -120,7 +161,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clean up symlinks\n",
+    "visualize_preds()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Clean up symlinks\n",
+    "Once done with notebook, run this code block to remove the symlinks."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!rm draw_grid.py modeling config ../src/imgcls/config/config ../src/imgcls/modeling/modeling"
    ]
   }
