small fix to vis notebook

--- a/notebooks/visualize_prediction_results.ipynb
+++ b/notebooks/visualize_prediction_results.ipynb
@@ -11,16 +11,15 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Setup\n",
-    "Steps to configure the prediction visualizer."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Setup\n",
+    "Steps to configure the prediction visualizer."
+   ]
   },
   {
    "cell_type": "code",
@@ -50,13 +49,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Specify paths\n",
     "Specify the relative file paths for the data, config file, and model weights."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -65,20 +62,18 @@
    "outputs": [],
    "source": [
     "# Specify paths\n",
-    "data_json = '../data/synthetic/val.json'  # train.json, val.json or test.json\n",
-    "config_file = '../output/new_good_run/config.yaml'\n",
-    "model_weights = '../output/new_good_run/model_final.pth'"
+    "data_json = '../data/full/frames_100/val.json'  # train.json, val.json or test.json\n",
+    "config_file = '../output/X-101-grid-4-thres-0.15/config.yaml'\n",
+    "model_weights = '../output/X-101-grid-4-thres-0.15/model_best.pth'"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Set parameters\n",
     "Set the grid size and the min/max image sizes to feed to the model."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -108,13 +103,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Define method\n",
     "Main method for generating predictions for a random sample from dataset."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -138,22 +131,20 @@
     "    print(\"preds:  \" + str(predictions))\n",
     "    img = draw_pred_vs_true(img,\n",
     "                            predictions.reshape(GRID_SIZE, GRID_SIZE), \n",
-    "                            truth_labels.reshape(GRID_SIZE, GRID_SIZE))\n",
+    "                            truth_labels.reshape(GRID_SIZE, GRID_SIZE), GRID_SIZE)\n",
     "   \n",
-    "    plt.imshow(img[:, :, ::-1])\n",
+    "    plt.imshow(img)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Main\n",
     "This is the main code block which displays the predictions and truth labels. Run this block several times to get a\n",
     "qualitative sense of how well the model is doing"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -166,13 +157,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Clean up symlinks\n",
     "Once done with notebook, run this code block to remove the symlinks."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
